--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{font-family: 'Pacifico', cursive;
     --border:#8D2B0B;
     --contayner:#FFFBEA;
     --button:#DE911D;
+    --background_form:#de911d38;
     --form:#FCE588}
 header{background-color: var(--header);
     }
@@ -26,9 +27,16 @@ header{background-color: var(--header);
     color: var(--border);
     text-shadow:0.5px 0.5px 0.5px #222222;
     box-shadow:2px 2px 2px var(--border);}
-.form__add{position: absolute;
+.background_form__add{position: absolute;
+    background-color: var(--background_form);
     display: none;
-    
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    justify-content: center;
+    align-items: center;}
+.form__add{display: flex;
     flex-direction: column;
     background-color: var(--form);
     padding: 40px;
@@ -36,23 +44,37 @@ header{background-color: var(--header);
     border-radius: 20px;
     box-shadow:1px 1px 1px var(--border);}
 input{background-color: var(--contayner);
-    padding: 10px;
+    padding: 15px 80px;
     border-radius: 20px;
     outline: none;
     border: none;
     box-shadow:1px 1px 1px var(--border);
-    font-family: 'Pacifico', cursive;}
+    font-family: 'Pacifico', cursive;
+    font-size: 20px;
+    text-align:center;}
 .save{border-radius: 20px;
-    padding: 10px;
+    padding: 15px 80px;
     box-shadow:1px 1px 1px var(--border);
-    text-shadow:0.5px 0.5px 0.5px #222222;}
+    text-shadow:0.5px 0.5px 0.5px #222222;
+    font-size: 20px;
+    text-align:center;
+    width: calc(100%/2);}
+.form__add_title{font-size: 30px;
+    padding: 10px 0;}
+.form__add_year_image{display: flex;
+    gap: 20px;}
+.form__add_button{display: flex;
+    gap: 20px;
+    justify-content: space-between;}
 .book_contayner{max-width: 1280px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;    }
 @media(max-width: 1024px){.book_contayner{display: flex;
-    flex-direction: column;    }}
+    flex-direction: column;
+    
+    align-items: center;}}
 .book__body{background-color: var(--contayner);
     color: var(--font2);
     border: 1px solid var(--border);
@@ -84,5 +106,10 @@ button{font-family: 'Pacifico', cursive;
     border: none;
     font-size: 15px;
     color: var(--button); }
+@media(max-width: 1024px){.book__body, .title_book, button{font-size: 25px;
+    }}
+ @media(max-width: 1024px){img{width: 300px;
+    height: 300px;
+    }}
 button:hover{cursor: pointer;}
 button:active{color: var(--header);}
